图片模块，包含用户下载图片，管理员上传图片和一些增删改查操作

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,12 +7,19 @@ server:
 spring:
   application:
     name: Intelligent-cloud-backend
+
 #    数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/IC_picture
     username: root
     password: 123456
+
+    # 开放更大的文件上传体积
+  servlet:
+    multipart:
+      max-file-size: 10MB
+
 
 mybatis-plus:
   configuration:
@@ -37,3 +44,11 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.guanbean.inteligentcloudbackend.controller
+# 对象存储配置（需要从腾讯云获取）
+cos:
+  client:
+    host: https://jidamnguanbean-1376482233.cos.ap-nanjing.myqcloud.com
+    secretId: 
+    secretKey: 
+    region: cos.ap-nanjing
+    bucket: jidamnguanbean-1376482233
