--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
         </dependency>
+        <!--   腾讯云对象存储     -->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.227</version> <!-- 使用最新版本 -->
+        </dependency>
+
 
 
     </dependencies>
