--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
             <version>5.6.227</version> <!-- 使用最新版本 -->
         </dependency>
 
+        <!-- HTML 解析：https://jsoup.org/ -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.3</version>
+        </dependency>
+
+
 
 
     </dependencies>
