--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,25 @@ spring:
   servlet:
     multipart:
       max-file-size: 10MB
+    context-path: /api
+
+  # session 配置
+  session:
+    store-type: redis
+    # session 30 天过期
+    timeout: 2592000
+    cookie:
+      max-age: 2592000
+
+
+  #  profiles:
+#    active: local
+
+  redis:
+    database: 1
+    host: 127.0.0.1
+    port: 6379
+    timeout: 5000
 
 
 mybatis-plus:
@@ -44,4 +63,4 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.guanbean.inteligentcloudbackend.controller
-# 对象存储配置（需要从腾讯云获取）
+
