--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dashscope-sdk-java</artifactId>
+            <version>2.19.2</version>
+        </dependency>
 
 
     </dependencies>
